{
  "version": 4,
  "terraform_version": "1.14.8",
  "serial": 15,
  "lineage": "6399789e-31b9-a938-2f55-7e3f910cd7f9",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:sa-east-1:681892816208:internet-gateway/igw-0facee22f48f8d879",
            "id": "igw-0facee22f48f8d879",
            "owner_id": "681892816208",
            "region": "sa-east-1",
            "vpc_id": "vpc-0055a807a19ee0093"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "681892816208",
            "id": "igw-0facee22f48f8d879",
            "region": "sa-east-1"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:sa-east-1:681892816208:route-table/rtb-06e3cfb008ab84c28",
            "id": "rtb-06e3cfb008ab84c28",
            "owner_id": "681892816208",
            "propagating_vgws": [],
            "region": "sa-east-1",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0facee22f48f8d879",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0055a807a19ee0093"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "681892816208",
            "id": "rtb-06e3cfb008ab84c28",
            "region": "sa-east-1"
          },
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-07cc2cfdd42e31626",
            "region": "sa-east-1",
            "route_table_id": "rtb-06e3cfb008ab84c28",
            "subnet_id": "subnet-0bf7e8eb858528e97"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "681892816208",
            "id": "rtbassoc-07cc2cfdd42e31626",
            "region": "sa-east-1"
          },
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_route_table.main",
            "aws_subnet.main",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ecs",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:sa-east-1:681892816208:security-group/sg-061835597c33accfa",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-061835597c33accfa",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 8000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8000
              }
            ],
            "name": "terraform-20260517134400616100000001",
            "name_prefix": "terraform-",
            "owner_id": "681892816208",
            "region": "sa-east-1",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0055a807a19ee0093"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "681892816208",
            "id": "sg-061835597c33accfa",
            "region": "sa-east-1"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:sa-east-1:681892816208:subnet/subnet-0bf7e8eb858528e97",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "sa-east-1a",
            "availability_zone_id": "sae1-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0bf7e8eb858528e97",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "681892816208",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "sa-east-1",
            "vpc_id": "vpc-0055a807a19ee0093"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "681892816208",
            "id": "subnet-0bf7e8eb858528e97",
            "region": "sa-east-1"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:sa-east-1:681892816208:vpc/vpc-0055a807a19ee0093",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-036f88fb31ece3233",
            "default_route_table_id": "rtb-0aa1d19cc00b841e6",
            "default_security_group_id": "sg-09e709fc84f3098e6",
            "dhcp_options_id": "dopt-02b47a0068268fd22",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0055a807a19ee0093",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0aa1d19cc00b841e6",
            "owner_id": "681892816208",
            "region": "sa-east-1"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "681892816208",
            "id": "vpc-0055a807a19ee0093",
            "region": "sa-east-1"
          }
        }
      ]
    }
  ]
}